--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -152,6 +153,21 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
+        </plugin>
+        <plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.13.0</version>
+		</plugin>
+		<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.1</version>
+          <configuration>
+	        		<suiteXmlFiles>
+	        			<suiteXmlFile>master.xml</suiteXmlFile>
+	        		</suiteXmlFiles>
+	        	</configuration>
         </plugin>
       </plugins>
     </pluginManagement>
